Updated index.html to include meta

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stoorey - Stationery | Gifts | Toys | Sports</title>
     <link rel="icon" href="/src/assets/favicon.ico" type="image/x-icon" />
-    <meta name="description" content="Discover premium products at ShopElite. Shop our curated collection of high-quality electronics, accessories, and innovative gadgets with exceptional customer service." />
-    <meta name="author" content="ShopElite" />
-    <meta name="keywords" content="ecommerce, premium products, electronics, gadgets, quality, shopping" />
+    <meta name="description" content="Discover premium products at Stoorey. Shop our curated collection of high-quality stationery, gifts, toys, and sports equipment." />
+    <meta name="author" content="Stoorey" />
+    <meta name="keywords" content="ecommerce, premium products, stationery, gifts, toys, sports, shopping" />
 
-    <meta property="og:title" content="ShopElite - Premium Products & Exceptional Quality" />
-    <meta property="og:description" content="Discover premium products at ShopElite. Shop our curated collection of high-quality electronics, accessories, and innovative gadgets." />
+    <meta property="og:title" content="Stoorey - Stationery | Gifts | Toys | Sports" />
+    <meta property="og:description" content="Discover premium products at Stoorey. Shop our curated collection of high-quality stationery, gifts, toys, and sports equipment." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
